<resources>
    <string name="app_name">Tasks</string>

    // List
    <string name="empty_list">There is no task at all</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>

    // Detail
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_end_date">No end date</string>
    <string name="status_not_started">Not started</string>
    <string name="status_in_progress">In progress</string>
    <string name="status_done">Done</string>
    <string name="task_saved">Task saved</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="created_time">Created time: %s</string>
    <string name="last_modified_time">Last modified time: %s</string>
    <string name="select_status">Select status</string>
    <string name="detail_dialog_message">Do you want to quit without saving changed data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_empty_notify">Title must not be empty!</string>
    <string name="show_completed">Show completed</string>
    <string name="hide_completed">Hide completed</string>
    <string name="task">Task</string>
    <string name="task_notification_channel">Task notification channel</string>
    <string name="task_notification_desc">Channel for Task deadline</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login success</string>
    <string name="empty_username_password">Username and Password should not be empty!</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="username_pattern">Username: %s</string>
    <string name="display_name_pattern">Display name: %s</string>
    <string name="logged_out">Logged out</string>
    <string name="user_token_expired">User token expired, logged out!</string>
    <string name="started_sync">Started sync</string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_success">Sync success</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_failed">Register failed</string>
    <string name="username_empty">Username should not be empty!</string>
    <string name="password_not_match">2 passwords not match</string>
    <string name="password_empty">Password should not be empty!</string>
    <string name="register_success">Register success</string>
    <string name="server_timeout">server timeout!</string>
    <string name="connection_failed">Connection failed</string>
    <string name="display_name">Display name</string>
    <string name="display_name_empty">Display name should not be empty!</string>
</resources>