<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/status_select_not_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="7dp"
        android:paddingVertical="5dp"
        android:background="@drawable/background_status_not_started"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginBottom="10dp"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_color"
            android:text="@string/status_not_started"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_select_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="7dp"
        android:paddingVertical="5dp"
        android:background="@drawable/background_status_in_progress"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginBottom="10dp"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_color"
            android:text="@string/status_in_progress"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_select_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="7dp"
        android:paddingVertical="5dp"
        android:background="@drawable/background_status_done"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/status_text_color"
            android:text="@string/status_done"/>
    </LinearLayout>


</LinearLayout>