<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.detail.DetailFragment">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingVertical="@dimen/padding_detail_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/detail_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_detail_title_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_detail_title_horizontal"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/detail_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_check"
                app:layout_constraintTop_toTopOf="@id/detail_check" />

            <ImageView
                android:id="@+id/deadline_icon"
                android:layout_width="@dimen/detail_icon_size"
                android:layout_height="@dimen/detail_icon_size"
                android:layout_marginStart="@dimen/margin_detail_title_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_date_range_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_check"
                app:tint="@color/primary_color" />

            <LinearLayout
                android:id="@+id/detail_deadline_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:foreground="@color/transparent"
                android:clickable="true"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="@id/deadline_icon"
                app:layout_constraintEnd_toEndOf="@id/detail_title"
                app:layout_constraintStart_toStartOf="@+id/detail_title"
                app:layout_constraintTop_toTopOf="@id/deadline_icon">
                <TextView
                    android:id="@+id/detail_deadline"
                    android:textColor="@color/main_text_color"
                    android:text="@string/no_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:id="@+id/status_icon"
                android:layout_width="@dimen/detail_icon_size"
                android:layout_height="@dimen/detail_icon_size"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_check_24"
                app:tint="@color/primary_color"
                app:layout_constraintStart_toStartOf="@id/detail_check"
                app:layout_constraintTop_toBottomOf="@id/deadline_icon" />

            <LinearLayout
                android:id="@+id/detail_status_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:foreground="@color/transparent"
                android:clickable="true"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@id/status_icon"
                app:layout_constraintStart_toStartOf="@id/detail_title"
                app:layout_constraintTop_toTopOf="@id/status_icon"
                app:layout_constraintEnd_toEndOf="@id/detail_title"
                android:orientation="horizontal">
                <com.rose.taskassignmenttest.views.common.StatusTagView
                    android:id="@+id/detail_status_tag"
                    app:statusType="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <TextView
                android:id="@+id/detail_create_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/sub_text_color"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@id/detail_title"
                app:layout_constraintTop_toBottomOf="@id/detail_status_container" />

            <TextView
                android:id="@+id/detail_modified_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/sub_text_color"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@id/detail_title"
                app:layout_constraintTop_toBottomOf="@+id/detail_create_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/detail_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detail_save_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/detail_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/detail_cancel_btn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>